
# Element and Component Modules:
# ------------------------------
add_subdirectory(CCSDS)
add_subdirectory(CmdManager)
add_subdirectory(ComponentBaseClasses)
add_subdirectory(CtrlInterface)
add_subdirectory(DataManager)
add_subdirectory(Guider)
add_subdirectory(Heaters)
add_subdirectory(Imaging)
add_subdirectory(MountCtrl)
add_subdirectory(ObserverCtrl)
add_subdirectory(SysLogger)
add_subdirectory(SysMon)
add_subdirectory(TlmManager)
add_subdirectory(Util)
